--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,53 @@
-# Ignore some folders except special files
+# Prerequisites
+*.d
 
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Linker output
+*.ilk
+*.map
+*.exp
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+
+#ignore some dir
 .vscode/
-
-lab1/lab1_1/*
-!lab1/lab1_1/*.c
-!lab1/lab1_1/*.md
-!lab1/lab1_1/gtk/gtk.c
-
-
-lab1/lab1_2/*
-!lab1/lab1_2/*.c
-!lab1/lab1_2/*.md
-
-lab2/*
-!lab2/*.c
-!lab2/*.md
-
-lab3/*
-!lab3/*.c
-!lab3/*.md
-!lab3/Makefile
+OSDesign/
 
 lab4/src/system_monitor.c
