--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -9,6 +9,6 @@ all:
 	$(MAKE) -C $(KDIR) M=$(PWD)
 clean:
 #	rm -f *.cmd *.o *.mod *.ko
-	rm -rf .*.cmd *.o *.mod.c *.ko .tmp_versions
+	rm -rf .*.cmd *.o *.mod.c *.ko .tmp_versions .*.mk *.symvers *.order
 #	$(MAKE) -C $(KDIR) M=$(PWD) clean
 endif
