完成关于cpu的函数，关于内存的函数

--- a/lab4/Makefile
+++ b/lab4/Makefile
@@ -5,7 +5,8 @@ RES = res/
 INCLUDE = -I./include/
 TARGET = main
 
-SRCS = $(SRC)main.c $(SRC)stringtool.c $(SRC)proctool.c
+SRCS = $(SRC)main.c $(SRC)stringtool.c \
+	   $(SRC)cpu.c $(SRC)meminfo.c
 OBJS = $(SRCS:.c=.o)
 
 # $@	目标文件   
